--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,7 @@ header .navbar div.container-fluid div.offcanvas .encabezado-offcanvas {
 }
 
 .fa-brands {
-  color: #222f3e;
+  color: #222f
 }
 
 p {
